Fixed issue with squished child images of .picture class

--- a/default.css
+++ b/default.css
@@ -35,8 +35,8 @@
 .picture > img {
   min-width: 5em;
   min-height: 5em;
-  max-width: 6.5em;
-  max-height: 6.5em;
+  max-width: 6.75em;
+  max-height: 6.75em;
 }
 .appetizer h4 {
   display: inline;
